...
        <Stack.Screen
          name="notes"
          options={{ title: 'My Notes', headerShown: true }}
        />
        <Stack.Screen
          name="alerts"
          options={{ title: 'Your Alerts', headerShown: true }}
        />
        <Stack.Screen
          name="lists"
          options={{ title: 'Your Lists', headerShown: true }}
        />
        <Stack.Screen
          name="lists/[id]"
          options={{ title: 'List details', headerShown: true }}
        />
        <Stack.Screen
...
